Realtime value passing on HTML using {{}}

--- a/isqip_route/isqip/src/app/calculator/calculator.component.html
+++ b/isqip_route/isqip/src/app/calculator/calculator.component.html
@@ -1,2 +1,7 @@
 <input type="text" [(ngModel)]="calcInput">
 <button (click)="btnClicked('Hey Bro')">Submit</button>
+
+{{calcInput}}
+
+<p>Switch 1</p>
+<p>Switch 2</p>
